generated/BerlingerFridgeTag/grammars/BerlingerFridgeTagParser.py
# Generated from BerlingerFridgeTag.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BerlingerFridgeTagParser ( Parser ):

    grammarFileName = "BerlingerFridgeTag.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Device'", "'Vers'", "'Fw Vers'", "'Sensor'", 
                     "'Conf'", "'Hist'", "'Cert'", "'Errors'", "'Serial'", 
                     "'PCB'", "'CID'", "'Lot'", "'Zone'", "'Measurement delay'", 
                     "'Moving Avrg'", "'User Alarm Config'", "'User Clock Config'", 
                     "'Alarm Indication'", "'Temp unit'", "'Alarm'", "'Int Sensor'", 
                     "'Timeout'", "'Offset'", "'Report history length'", 
                     "'Det Report'", "'Use ext devices'", "'Test Res'", 
                     "'Test TS'", "'TS Actv'", "'TS Report Creation'", "'Date'", 
                     "'Min T'", "'Max T'", "'Avrg T'", "'TS Min T'", "'TS Max T'", 
                     "'Int Sensor timeout'", "'Events'", "'Checked'", "'TS AM'", 
                     "'TS PM'", "'T AL'", "'t AL'", "'t Acc'", "'TS A'", 
                     "'C A'", "'t AccST'", "'Err Count'", "'Err TS'", "'Issuer'", 
                     "'Valid from'", "'Owner'", "'Public Key'", "'Sig Cert'", 
                     "'Sig'", "'---'", "'&'", "':'", "','", "'.'" ]

    symbolicNames = [ "<INVALID>", "DEVICE", "VERSION", "FW_VERSION", "SENSOR_COUNT", 
                      "CONFIG", "HISTORY", "CERTIFICATE", "ERRORS", "SERIAL", 
                      "PCB", "CID", "LOT", "ZONE", "MEASUREMENT_DELAY", 
                      "MOVING_AVERAGE", "USER_ALARM_CONFIG", "USER_CLOCK_CONFIG", 
                      "ALARM_INDICATION", "TEMP_UNIT", "ALARM", "INTERNAL_SENSOR", 
                      "TIMEOUT", "OFFSET", "REPORT_HISTORY_LENGTH", "DETAILED_REPORT", 
                      "USE_EXTERNAL_DEVICES", "TEST_RESULT", "TEST_TIMESTAMP", 
                      "ACTIVATION_TIMESTAMP", "REPORT_CREATION_TIMESTAMP", 
                      "DATE_KEY", "MIN_TEMP", "MAX_TEMP", "AVG_TEMP", "MIN_TEMP_TIMESTAMP", 
                      "MAX_TEMP_TIMESTAMP", "SENSOR_TIMEOUT", "EVENTS", 
                      "CHECKED", "AM_TIMESTAMP", "PM_TIMESTAMP", "TEMP_THRESHOLD", 
                      "DURATION_THRESHOLD", "ACCUMULATED_TIME", "ALARM_TIMESTAMP", 
                      "ALARM_COUNT", "ACCUMULATED_SENSOR_TIMEOUT", "ERROR_COUNT", 
                      "ERROR_TIMESTAMP", "ISSUER", "VALID_FROM", "OWNER", 
                      "PUBLIC_KEY", "SIGNATURE_CERT", "SIGNATURE", "MISSING", 
                      "AMPERSAND", "COLON", "COMMA", "DOT", "SIGN", "DATETIME", 
                      "DATE", "TIME", "HEX", "INT", "ID", "WS" ]

    RULE_line = 0
    RULE_entry = 1
    RULE_key = 2
    RULE_knownKey = 3
    RULE_value = 4
    RULE_temperature = 5
    RULE_textValue = 6
    RULE_textPart = 7

    ruleNames =  [ "line", "entry", "key", "knownKey", "value", "temperature", 
                   "textValue", "textPart" ]

    EOF = Token.EOF
    DEVICE=1
    VERSION=2
    FW_VERSION=3
    SENSOR_COUNT=4
    CONFIG=5
    HISTORY=6
    CERTIFICATE=7
    ERRORS=8
    SERIAL=9
    PCB=10
    CID=11
    LOT=12
    ZONE=13
    MEASUREMENT_DELAY=14
    MOVING_AVERAGE=15
    USER_ALARM_CONFIG=16
    USER_CLOCK_CONFIG=17
    ALARM_INDICATION=18
    TEMP_UNIT=19
    ALARM=20
    INTERNAL_SENSOR=21
    TIMEOUT=22
    OFFSET=23
    REPORT_HISTORY_LENGTH=24
    DETAILED_REPORT=25
    USE_EXTERNAL_DEVICES=26
    TEST_RESULT=27
    TEST_TIMESTAMP=28
    ACTIVATION_TIMESTAMP=29
    REPORT_CREATION_TIMESTAMP=30
    DATE_KEY=31
    MIN_TEMP=32
    MAX_TEMP=33
    AVG_TEMP=34
    MIN_TEMP_TIMESTAMP=35
    MAX_TEMP_TIMESTAMP=36
    SENSOR_TIMEOUT=37
    EVENTS=38
    CHECKED=39
    AM_TIMESTAMP=40
    PM_TIMESTAMP=41
    TEMP_THRESHOLD=42
    DURATION_THRESHOLD=43
    ACCUMULATED_TIME=44
    ALARM_TIMESTAMP=45
    ALARM_COUNT=46
    ACCUMULATED_SENSOR_TIMEOUT=47
    ERROR_COUNT=48
    ERROR_TIMESTAMP=49
    ISSUER=50
    VALID_FROM=51
    OWNER=52
    PUBLIC_KEY=53
    SIGNATURE_CERT=54
    SIGNATURE=55
    MISSING=56
    AMPERSAND=57
    COLON=58
    COMMA=59
    DOT=60
    SIGN=61
    DATETIME=62
    DATE=63
    TIME=64
    HEX=65
    INT=66
    ID=67
    WS=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entry(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BerlingerFridgeTagParser.EntryContext)
            else:
                return self.getTypedRuleContext(BerlingerFridgeTagParser.EntryContext,i)


        def EOF(self):
            return self.getToken(BerlingerFridgeTagParser.EOF, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BerlingerFridgeTagParser.COMMA)
            else:
                return self.getToken(BerlingerFridgeTagParser.COMMA, i)

        def getRuleIndex(self):
            return BerlingerFridgeTagParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = BerlingerFridgeTagParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_line)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.entry()
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==59:
                self.state = 17
                self.match(BerlingerFridgeTagParser.COMMA)
                self.state = 18
                self.entry()
                self.state = 23
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 24
            self.match(BerlingerFridgeTagParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BerlingerFridgeTagParser.RULE_entry

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class KeyValueContext(EntryContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BerlingerFridgeTagParser.EntryContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def key(self):
            return self.getTypedRuleContext(BerlingerFridgeTagParser.KeyContext,0)

        def COLON(self):
            return self.getToken(BerlingerFridgeTagParser.COLON, 0)
        def value(self):
            return self.getTypedRuleContext(BerlingerFridgeTagParser.ValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKeyValue" ):
                listener.enterKeyValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKeyValue" ):
                listener.exitKeyValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKeyValue" ):
                return visitor.visitKeyValue(self)
            else:
                return visitor.visitChildren(self)



    def entry(self):

        localctx = BerlingerFridgeTagParser.EntryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_entry)
        self._la = 0 # Token type
        try:
            localctx = BerlingerFridgeTagParser.KeyValueContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.key()
            self.state = 27
            self.match(BerlingerFridgeTagParser.COLON)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 56)) & ~0x3f) == 0 and ((1 << (_la - 56)) & 4083) != 0):
                self.state = 28
                self.value()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KeyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BerlingerFridgeTagParser.RULE_key

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class KnownKeyRefContext(KeyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BerlingerFridgeTagParser.KeyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def knownKey(self):
            return self.getTypedRuleContext(BerlingerFridgeTagParser.KnownKeyContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKnownKeyRef" ):
                listener.enterKnownKeyRef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKnownKeyRef" ):
                listener.exitKnownKeyRef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKnownKeyRef" ):
                return visitor.visitKnownKeyRef(self)
            else:
                return visitor.visitChildren(self)


    class IndexKeyContext(KeyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BerlingerFridgeTagParser.KeyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(BerlingerFridgeTagParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndexKey" ):
                listener.enterIndexKey(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndexKey" ):
                listener.exitIndexKey(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndexKey" ):
                return visitor.visitIndexKey(self)
            else:
                return visitor.visitChildren(self)


    class GenericKeyContext(KeyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BerlingerFridgeTagParser.KeyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BerlingerFridgeTagParser.ID)
            else:
                return self.getToken(BerlingerFridgeTagParser.ID, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGenericKey" ):
                listener.enterGenericKey(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGenericKey" ):
                listener.exitGenericKey(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGenericKey" ):
                return visitor.visitGenericKey(self)
            else:
                return visitor.visitChildren(self)



    def key(self):

        localctx = BerlingerFridgeTagParser.KeyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_key)
        self._la = 0 # Token type
        try:
            self.state = 38
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55]:
                localctx = BerlingerFridgeTagParser.KnownKeyRefContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 31
                self.knownKey()
                pass
            elif token in [66]:
                localctx = BerlingerFridgeTagParser.IndexKeyContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 32
                self.match(BerlingerFridgeTagParser.INT)
                pass
            elif token in [67]:
                localctx = BerlingerFridgeTagParser.GenericKeyContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 34 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 33
                    self.match(BerlingerFridgeTagParser.ID)
                    self.state = 36 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==67):
                        break

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KnownKeyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEVICE(self):
            return self.getToken(BerlingerFridgeTagParser.DEVICE, 0)

        def VERSION(self):
            return self.getToken(BerlingerFridgeTagParser.VERSION, 0)

        def FW_VERSION(self):
            return self.getToken(BerlingerFridgeTagParser.FW_VERSION, 0)

        def SENSOR_COUNT(self):
            return self.getToken(BerlingerFridgeTagParser.SENSOR_COUNT, 0)

        def CONFIG(self):
            return self.getToken(BerlingerFridgeTagParser.CONFIG, 0)

        def HISTORY(self):
            return self.getToken(BerlingerFridgeTagParser.HISTORY, 0)

        def CERTIFICATE(self):
            return self.getToken(BerlingerFridgeTagParser.CERTIFICATE, 0)

        def ERRORS(self):
            return self.getToken(BerlingerFridgeTagParser.ERRORS, 0)

        def SERIAL(self):
            return self.getToken(BerlingerFridgeTagParser.SERIAL, 0)

        def PCB(self):
            return self.getToken(BerlingerFridgeTagParser.PCB, 0)

        def CID(self):
            return self.getToken(BerlingerFridgeTagParser.CID, 0)

        def LOT(self):
            return self.getToken(BerlingerFridgeTagParser.LOT, 0)

        def ZONE(self):
            return self.getToken(BerlingerFridgeTagParser.ZONE, 0)

        def MEASUREMENT_DELAY(self):
            return self.getToken(BerlingerFridgeTagParser.MEASUREMENT_DELAY, 0)

        def MOVING_AVERAGE(self):
            return self.getToken(BerlingerFridgeTagParser.MOVING_AVERAGE, 0)

        def USER_ALARM_CONFIG(self):
            return self.getToken(BerlingerFridgeTagParser.USER_ALARM_CONFIG, 0)

        def USER_CLOCK_CONFIG(self):
            return self.getToken(BerlingerFridgeTagParser.USER_CLOCK_CONFIG, 0)

        def ALARM_INDICATION(self):
            return self.getToken(BerlingerFridgeTagParser.ALARM_INDICATION, 0)

        def TEMP_UNIT(self):
            return self.getToken(BerlingerFridgeTagParser.TEMP_UNIT, 0)

        def ALARM(self):
            return self.getToken(BerlingerFridgeTagParser.ALARM, 0)

        def INTERNAL_SENSOR(self):
            return self.getToken(BerlingerFridgeTagParser.INTERNAL_SENSOR, 0)

        def TIMEOUT(self):
            return self.getToken(BerlingerFridgeTagParser.TIMEOUT, 0)

        def OFFSET(self):
            return self.getToken(BerlingerFridgeTagParser.OFFSET, 0)

        def REPORT_HISTORY_LENGTH(self):
            return self.getToken(BerlingerFridgeTagParser.REPORT_HISTORY_LENGTH, 0)

        def DETAILED_REPORT(self):
            return self.getToken(BerlingerFridgeTagParser.DETAILED_REPORT, 0)

        def USE_EXTERNAL_DEVICES(self):
            return self.getToken(BerlingerFridgeTagParser.USE_EXTERNAL_DEVICES, 0)

        def TEST_RESULT(self):
            return self.getToken(BerlingerFridgeTagParser.TEST_RESULT, 0)

        def TEST_TIMESTAMP(self):
            return self.getToken(BerlingerFridgeTagParser.TEST_TIMESTAMP, 0)

        def ACTIVATION_TIMESTAMP(self):
            return self.getToken(BerlingerFridgeTagParser.ACTIVATION_TIMESTAMP, 0)

        def REPORT_CREATION_TIMESTAMP(self):
            return self.getToken(BerlingerFridgeTagParser.REPORT_CREATION_TIMESTAMP, 0)

        def DATE_KEY(self):
            return self.getToken(BerlingerFridgeTagParser.DATE_KEY, 0)

        def MIN_TEMP(self):
            return self.getToken(BerlingerFridgeTagParser.MIN_TEMP, 0)

        def MAX_TEMP(self):
            return self.getToken(BerlingerFridgeTagParser.MAX_TEMP, 0)

        def AVG_TEMP(self):
            return self.getToken(BerlingerFridgeTagParser.AVG_TEMP, 0)

        def MIN_TEMP_TIMESTAMP(self):
            return self.getToken(BerlingerFridgeTagParser.MIN_TEMP_TIMESTAMP, 0)

        def MAX_TEMP_TIMESTAMP(self):
            return self.getToken(BerlingerFridgeTagParser.MAX_TEMP_TIMESTAMP, 0)

        def SENSOR_TIMEOUT(self):
            return self.getToken(BerlingerFridgeTagParser.SENSOR_TIMEOUT, 0)

        def EVENTS(self):
            return self.getToken(BerlingerFridgeTagParser.EVENTS, 0)

        def CHECKED(self):
            return self.getToken(BerlingerFridgeTagParser.CHECKED, 0)

        def AM_TIMESTAMP(self):
            return self.getToken(BerlingerFridgeTagParser.AM_TIMESTAMP, 0)

        def PM_TIMESTAMP(self):
            return self.getToken(BerlingerFridgeTagParser.PM_TIMESTAMP, 0)

        def TEMP_THRESHOLD(self):
            return self.getToken(BerlingerFridgeTagParser.TEMP_THRESHOLD, 0)

        def DURATION_THRESHOLD(self):
            return self.getToken(BerlingerFridgeTagParser.DURATION_THRESHOLD, 0)

        def ACCUMULATED_TIME(self):
            return self.getToken(BerlingerFridgeTagParser.ACCUMULATED_TIME, 0)

        def ALARM_TIMESTAMP(self):
            return self.getToken(BerlingerFridgeTagParser.ALARM_TIMESTAMP, 0)

        def ALARM_COUNT(self):
            return self.getToken(BerlingerFridgeTagParser.ALARM_COUNT, 0)

        def ACCUMULATED_SENSOR_TIMEOUT(self):
            return self.getToken(BerlingerFridgeTagParser.ACCUMULATED_SENSOR_TIMEOUT, 0)

        def ERROR_COUNT(self):
            return self.getToken(BerlingerFridgeTagParser.ERROR_COUNT, 0)

        def ERROR_TIMESTAMP(self):
            return self.getToken(BerlingerFridgeTagParser.ERROR_TIMESTAMP, 0)

        def ISSUER(self):
            return self.getToken(BerlingerFridgeTagParser.ISSUER, 0)

        def VALID_FROM(self):
            return self.getToken(BerlingerFridgeTagParser.VALID_FROM, 0)

        def OWNER(self):
            return self.getToken(BerlingerFridgeTagParser.OWNER, 0)

        def PUBLIC_KEY(self):
            return self.getToken(BerlingerFridgeTagParser.PUBLIC_KEY, 0)

        def SIGNATURE_CERT(self):
            return self.getToken(BerlingerFridgeTagParser.SIGNATURE_CERT, 0)

        def SIGNATURE(self):
            return self.getToken(BerlingerFridgeTagParser.SIGNATURE, 0)

        def getRuleIndex(self):
            return BerlingerFridgeTagParser.RULE_knownKey

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKnownKey" ):
                listener.enterKnownKey(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKnownKey" ):
                listener.exitKnownKey(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKnownKey" ):
                return visitor.visitKnownKey(self)
            else:
                return visitor.visitChildren(self)




    def knownKey(self):

        localctx = BerlingerFridgeTagParser.KnownKeyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_knownKey)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 72057594037927934) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BerlingerFridgeTagParser.RULE_value

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class TextValContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BerlingerFridgeTagParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def textValue(self):
            return self.getTypedRuleContext(BerlingerFridgeTagParser.TextValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTextVal" ):
                listener.enterTextVal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTextVal" ):
                listener.exitTextVal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTextVal" ):
                return visitor.visitTextVal(self)
            else:
                return visitor.visitChildren(self)


    class HexValContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BerlingerFridgeTagParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def HEX(self):
            return self.getToken(BerlingerFridgeTagParser.HEX, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHexVal" ):
                listener.enterHexVal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHexVal" ):
                listener.exitHexVal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHexVal" ):
                return visitor.visitHexVal(self)
            else:
                return visitor.visitChildren(self)


    class TimeValContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BerlingerFridgeTagParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TIME(self):
            return self.getToken(BerlingerFridgeTagParser.TIME, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTimeVal" ):
                listener.enterTimeVal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTimeVal" ):
                listener.exitTimeVal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimeVal" ):
                return visitor.visitTimeVal(self)
            else:
                return visitor.visitChildren(self)


    class TempValContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BerlingerFridgeTagParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def temperature(self):
            return self.getTypedRuleContext(BerlingerFridgeTagParser.TemperatureContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTempVal" ):
                listener.enterTempVal(self)
